<resources>
    <string name="app_name">Secret  Diary</string>
    <string name="undo">Undo</string>
    <string name="save">Save</string>
    <string name="emptyStringError">Empty or blank input cannot be saved</string>
    <string name="removeStringDialogTitle">Remove last note</string>
    <string name="removeStringDialogMessage">Do you really want to remove the last writing? This operation cannot be undone!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error_wrongPin">Wrong PIN!</string>
    <string name="secretdiary">SecretDiary</string>
    <string name="dearDiary">Dear Diary...</string>
    <string name="enterPin">Enter PIN</string>
    <string name="login">Log In</string>
</resources>
